--- a/linphone-ios/linphone-ios/Base.lproj/Main.storyboard
+++ b/linphone-ios/linphone-ios/Base.lproj/Main.storyboard
@@ -53,11 +53,19 @@
                                 </connections>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SbB-zM-UQ9">
-                                <rect key="frame" x="137" y="324" width="46" height="30"/>
+                                <rect key="frame" x="52" y="325" width="46" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="注册"/>
                                 <connections>
                                     <action selector="registration:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HQ1-Om-ayN"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5t2-XW-PKr">
+                                <rect key="frame" x="214" y="323" width="46" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="注销"/>
+                                <connections>
+                                    <action selector="cancel:" destination="BYZ-38-t0r" eventType="touchUpInside" id="L4f-Xc-vNr"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -71,7 +79,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="165" y="57"/>
+            <point key="canvasLocation" x="165" y="55.985915492957744"/>
         </scene>
     </scenes>
 </document>
