--- a/linphone-ios/linphone-ios/Base.lproj/Main.storyboard
+++ b/linphone-ios/linphone-ios/Base.lproj/Main.storyboard
@@ -79,7 +79,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="165" y="55.985915492957744"/>
+            <point key="canvasLocation" x="-135" y="-95"/>
         </scene>
     </scenes>
 </document>
