--- a/linphone-ios/linphone-ios/Base.lproj/Main.storyboard
+++ b/linphone-ios/linphone-ios/Base.lproj/Main.storyboard
@@ -95,7 +95,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-398" y="-111"/>
+            <point key="canvasLocation" x="-399.375" y="-111.97183098591549"/>
         </scene>
     </scenes>
 </document>
